<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Bouton retour -->
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Titre de la page -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="16dp"
        android:textStyle="bold"
        android:text="@string/teacher_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Séparateur -->
    <View
        android:id="@+id/sep"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sélection de matière -->
    <LinearLayout
        android:id="@+id/subjectSpinnerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sep" />

    <!-- Bouton View More -->

    <!-- Filtres de prix -->
    <Button
        android:id="@+id/viewMoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="View more"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectSpinnerLayout" />

    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMoreBtn">

        <EditText
            android:id="@+id/minPrice"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/min_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/maxPrice"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="@string/max_price"
            android:inputType="numberDecimal" />
<!--        <Spinner-->
<!--            android:id="@+id/gradeSpinner"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@android:drawable/btn_dropdown"-->
<!--            tools:ignore="ContentDescription"-->
<!--            android:layout_marginTop="8dp" />-->
    </LinearLayout>

    <!-- Bouton Apply Filter -->
    <Button
        android:id="@+id/applyFilterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/apply_filter"
        android:backgroundTint="#3949AB"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/filterLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTeachers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="6dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/applyFilterBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/teacher_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
